# Amazon_ORF5_Analytics

./: .gitignore  Inductions.ipynb  README.md  S04_Check.ipynb  SO4_10_00_10_30.xlsx  SO4_10_51_11_21.xlsx  SO4_20250920-105104_20250920-112000.xlsx  SO4_20250920-105104_20250920-112000NoAdjusted.xlsx  SO4_20250920-105500_20250920-112500.xlsx  SO4_20250920-110000_20250920-113000.xlsx  SO4_20250920-110500_20250920-113500.xlsx  SO4_20250920-111000_20250920-114000.xlsx  SO4_20250920-111500_20250920-114039.xlsx  SO4_9_45_10_27.xlsx  alarms.ipynb  analysis_output.xlsx  main.py  pyproject.toml  rate.ipynb  ratePPH_20250919-091200_20250919-094200.xlsx  ratePPH_20250919-091400_20250919-094400.xlsx  ~$SO4_20250920-105104_20250920-112000NoAdjusted.xlsx
Data/: S04.csv  inductediu007.csv  iu006rate.csv
data/: CNO8_Destination_Mapping.xlsx  Index_to_change.xlsx  MTN6_Destination_Mapping.xlsx  ORF5_Destination_Mapping.xlsx  SAT9_Destination_Mapping.xlsx
notebooks/: S02.ipynb  S04_Check.ipynb  alarmsCheck.ipynb  chute_jam.ipynb  fixed.csv  item_measurements.ipynb  rate.ipynb  scanner_filter.ipynb
src/: DBS.py  Estops.py  IAS.py  Induction_PPH.py  JamChutesStats.py  PPH.py  S02.py  S04.py  S04_Analysis.py  alarms.py  chute_alarms.py  config.py  induction_alarms.py  main.py  scan.py
src/utils/: buemer_to_amazon.py  chute_mapping.py  combine.py  data_loader.py  file_picker.py  time_frame.py
