[project]
name = "amazon_stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "ruff>=0.14.1",
]
